# inkless

./: .gitignore  .prettierignore  .prettierrc  README.md  package.json
src/: hl.css  hl.js  index.html  script.js  shortcuts.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
