[package]
name = "inkless"
version = "1.0.0"
description = "Write simple, stay focused."
authors = ["Axorax"]
edition = "2021"

[lib]
name = "inkless_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[profile.dev]
incremental = true

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
